@@ -29,7 +29,7 @@
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm DigestKAT
- * @run main/othervm DigestKAT sm
+ * @run main/othervm -Djava.security.manager=allow DigestKAT sm
  */
 
 import java.io.ByteArrayOutputStream;
