@@ -38,7 +38,7 @@ import java.security.spec.*;
  * @summary Also checks to ensure that sensitive RSA keys are correctly not exposed
  * @library /test/lib ..
  * @run main/othervm TestP11KeyFactoryGetRSAKeySpec
- * @run main/othervm TestP11KeyFactoryGetRSAKeySpec sm rsakeys.ks.policy
+ * @run main/othervm -Djava.security.manager=allow TestP11KeyFactoryGetRSAKeySpec sm rsakeys.ks.policy
  * @run main/othervm -DCUSTOM_P11_CONFIG_NAME=p11-nss-sensitive.txt -DNO_DEIMOS=true -DNO_DEFAULT=true TestP11KeyFactoryGetRSAKeySpec
  * @modules jdk.crypto.cryptoki
  */
